// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration: signout a signed in user is successfully signed out and relevant subscriptions are deleted 1`] = `
Object {
  "attachments": "[{\\"color\\":\\"#24292f\\",\\"mrkdwn_in\\":[\\"text\\"],\\"text\\":\\"Subscriptions to 2 repositories have been disabled because <@U2147483697>, who originally set them up, has disconnected their GitHub account.\\\\nUse the following slash commands to re-enable the subscriptions:\\\\n/github subscribe atom/atom\\\\n/github subscribe kubernetes/kubernetes\\"}]",
  "channel": "C2147483705",
  "token": "xoxp-token",
}
`;

exports[`Integration: signout a signed in user is successfully signed out and relevant subscriptions are deleted 2`] = `
Object {
  "attachments": "[{\\"color\\":\\"#24292f\\",\\"mrkdwn_in\\":[\\"text\\"],\\"text\\":\\"The subscription to 1 account has been disabled because <@U2147483697>, who originally set it up, has disconnected their GitHub account.\\\\nUse the following slash command to re-enable the subscription:\\\\n/github subscribe github\\"}]",
  "channel": "C12345",
  "token": "xoxp-token",
}
`;

exports[`Integration: signout a signed in user is successfully signed out and relevant subscriptions are deleted 3`] = `
":white_check_mark: <@U2147483697> is now signed out
Features like subscriptions and rich link previews will stop working. Use \`/github signin\` to sign back into your GitHub account at any time."
`;

exports[`Integration: signout a signed in user is successfully signed out and relevant subscriptions are deleted 4`] = `
Set {
  "pending-command#13345224609.738474920.8088930838d88f008e0",
}
`;

exports[`Integration: signout a signed in user is successfully signed out and relevant subscriptions are deleted 5`] = `
Map {
  "pending-command#13345224609.738474920.8088930838d88f008e0" => Object {
    "channel_id": "C2147483705",
    "channel_name": "test",
    "command": "/github",
    "enterprise_id": "E0001",
    "enterprise_name": "Globular%20Construct%20Inc",
    "response_url": "https://hooks.slack.com/commands/1234/5678",
    "team_domain": "example",
    "team_id": "T0001",
    "text": "signout",
    "token": "secret",
    "trigger_id": "13345224609.738474920.8088930838d88f008e0",
    "user_id": "U2147483697",
    "user_name": "Steve",
  },
}
`;

exports[`Integration: signout a signed out user is prompted to sign in first 1`] = `
Array [
  Object {
    "color": "#24292f",
    "mrkdwn_in": Array [
      "text",
    ],
    "text": ":white_check_mark: Success! <@U2147483697> is now connected to <https://github.com/wilhelmklopp|@wilhelmklopp>",
  },
]
`;

exports[`Integration: signout a signed out user is prompted to sign in first 2`] = `
Set {
  "pending-command#13345224609.738474920.8088930838d88f008e0",
}
`;

exports[`Integration: signout a signed out user is prompted to sign in first 3`] = `
Map {
  "pending-command#13345224609.738474920.8088930838d88f008e0" => Object {
    "channel_id": "C2147483705",
    "channel_name": "test",
    "command": "/github",
    "enterprise_id": "E0001",
    "enterprise_name": "Globular%20Construct%20Inc",
    "response_url": "https://hooks.slack.com/commands/1234/5678",
    "team_domain": "example",
    "team_id": "T0001",
    "text": "signout",
    "token": "secret",
    "trigger_id": "13345224609.738474920.8088930838d88f008e0",
    "user_id": "U2147483697",
    "user_name": "Steve",
  },
}
`;
